# Scan_utility

./: CMakeLists.txt  Makefile  README.md  main.cpp
include/: includes.hpp  scan.hpp  suspicious.hpp  time.hpp
src/: includes.hpp  scan.cpp  suspicious.cpp  time.hpp
src/scanner/: scan.cpp  scan.hpp
src/susp/: suspicious.cpp
test_scan/: start_test.h.in
test_scan/e2e_tests_check_file/: 1.txt  4.bat  5.bat  6.js  7.js
test_scan/e2e_tests_main/test_1/: 4.js
test_scan/e2e_tests_main/test_2/: 10.bat  5.bat  7.js  8.js
test_scan/e2e_tests_main_result/: test_answer1  test_answer2  test_answer3
tests/test_1/: 1.cpp
tests/test_2/: 1.txt
